--- a/php/phaseE.html
+++ b/php/phaseE.html
@@ -40,18 +40,18 @@
 -->
     <h2> What are the COVID-19 incidents for the countries with malaria rates (UNDER/ABOVE) (X amount)? </h2>
   <form action="phaseE1.php" method="post">
-    itemNum: <input type="text" name="item">
+    Under: <input type="text" name="item">
     <input type="submit">
   </form>
   <br/><br/>
 
-
+<!--
   <h2> Demonstrate reuse of a prepared statement in PHP</h2>
   <form action="prepareoncerunlots.php">
     <input type="submit" value="Go">
   </form>
   <br/><br/>
-
+-->
 
   </body>
 </html>
