--- a/php/phaseE.html
+++ b/php/phaseE.html
@@ -40,7 +40,7 @@
 -->
     <h2> What are the COVID-19 incidents for the countries with malaria rates (UNDER/ABOVE) (X amount)? </h2>
   <form action="phaseE1.php" method="post">
-    Under: <input type="text" name="item">
+    Country: <input type="text" name="item">
     <input type="submit">
   </form>
   <br/><br/>
