--- a/php/Overviews.html
+++ b/php/Overviews.html
@@ -57,6 +57,29 @@ li.dropdown {
 </head>
   <body>
 
+
+<!-- Navigation Menu -->
+<ul>
+  <li><a href="#">Home</a></li>
+  
+  <!--<li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Overviews</a>
+    <div class="dropdown-content">
+      <a href="oTopMalaria.php">Top Malaria</a>
+      <a href="#">Lowest Malaria</a>
+    </div>
+  </li>-->
+  <li><a href="Overviews.html">Overviews</a></li>
+  <li><a href="#">Malaria vs COVID-19</a></li>
+  <li><a href="#">Population</a></li>
+  <li><a href="#">Regional COVID-19</a></li>
+  <li><a href="#">Geographic Aggregates</a></li>
+  <li><a href="#">Healthcare vs Democracy</a></li>
+  <li><a href="#">Life Expectancy</a></li>
+  <li><a href="#">COVID Aggregates</a></li>
+</ul>
+
+
     <h1>Overviews</h1>
     <h3>Team Members: KEVIN GORMAN (KGORMAN4), UTKARSH SINGH (USINGH5)</h3>
 
