--- a/php/Overviews.html
+++ b/php/Overviews.html
@@ -60,7 +60,7 @@ li.dropdown {
 
 <!-- Navigation Menu -->
 <ul>
-  <li><a href="#">Home</a></li>
+  <li><a href="kgorman4_usingh5.html">Home</a></li>
   
   <!--<li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Overviews</a>
