--- a/php/kgorman4_usingh5.html
+++ b/php/kgorman4_usingh5.html
@@ -70,13 +70,13 @@ li.dropdown {
     </div>
   </li>-->
   <li><a href="Overviews.html">Overviews</a></li>
-  <li><a href="#">Malaria vs COVID-19</a></li>
-  <li><a href="#">Population</a></li>
-  <li><a href="#">Regional COVID-19</a></li>
-  <li><a href="#">Geographic Aggregates</a></li>
-  <li><a href="#">Healthcare vs Democracy</a></li>
-  <li><a href="#">Life Expectancy</a></li>
-  <li><a href="#">COVID Aggregates</a></li>
+  <li><a href="MalariaVSCovid.html">Malaria vs COVID-19</a></li>
+  <li><a href="Population.html">Population</a></li>
+  <li><a href="RegionalCovid.html">Regional COVID-19</a></li>
+  <li><a href="GeographicAggregates.html">Geographic Aggregates</a></li>
+  <li><a href="HealthcareVSDemocracy.html">Healthcare vs Democracy</a></li>
+  <li><a href="LifeExpectancy.html">Life Expectancy</a></li>
+  <li><a href="CovidAggregates.html">COVID Aggregates</a></li>
 </ul>
 
 <h1>EN.601.315.SP21 Databases Final Project</h1>
@@ -84,10 +84,6 @@ li.dropdown {
 <hr>
 <h3>README</h3>
 
-<h3>1. The Top Malaria Countries</h3>
-    <form action="overviews.php" method="post">
-      <input type="submit" value="Top Malaria Countries">
-    </form>
 
 </body>
 </html>
