--- a/php/CovidVSMalaria.html
+++ b/php/CovidVSMalaria.html
@@ -121,7 +121,7 @@ li.dropdown {
         <option value="UNDER">UNDER</option>
         <option value="OVER">OVER</option>
       </select><br>
-      Threshold: <input type="text" name="threshold2">
+      Threshold: <input type="text" name="item">
       <br>
       <input type="submit">
     </form>
