--- a/php/ps.html
+++ b/php/ps.html
@@ -3,21 +3,13 @@
 <html>
    <body>
 
-
-	<h2> Demonstrate a prepared statement in PHP where value collected from user</h2>
-	<form action="preparedstatement.php" method="post">
-		itemNum: <input type="text" name="item">
+	<h3>2. What are the COVID-19 incidents for the countries with malaria rates (UNDER/ABOVE) (Threshold amount)?</h3>
+    <h3> Example: "UNDER 100" -- (will return all countries where malaria rates are UNDER 100)</h3>
+	<form action="CovidMalaria2.php" method="post">
+		Threshold: <input type="text" name="item">
 		<input type="submit">
 	</form>
 	<br/><br/>
-
-
-	<h2> Demonstrate reuse of a prepared statement in PHP</h2>
-	<form action="prepareoncerunlots.php">
-		<input type="submit" value="Go">
-	</form>
-	<br/><br/>
-
 
    </body>
 </html>
