--- a/php/ps.html
+++ b/php/ps.html
@@ -1,7 +1,9 @@
-<!-- ps.html Prepared Statement demo -->
-
 <html>
    <body>
+	<h1>COVID-19 vs Malaria</h1>
+    <h3>Team Members: KEVIN GORMAN (KGORMAN4), UTKARSH SINGH (USINGH5)</h3>
+
+    <hr><br>
 
    	<h3>1. Which are the countries with malaria incidence rates in the world where cumulative COVID19 case counts are (UNDER/OVER) (X amount) or deaths are (UNDER/OVER) (X amount)? </h3>
     <h3> Example: "UNDER 100 OVER 1" -- (will return all countries where COVID cases are under 100 OR over 1)</h3>
