--- a/php/CovidVSMalaria.html
+++ b/php/CovidVSMalaria.html
@@ -7,19 +7,19 @@
 
    	<h3>1. Which are the countries with malaria incidence rates in the world where cumulative COVID19 case counts are (UNDER/OVER) (X amount) or deaths are (UNDER/OVER) (X amount)? </h3>
     <h3> Example: "UNDER 100 OVER 1" -- (will return all countries where COVID cases are under 100 OR over 1)</h3>
-	<form action="CovidMalaria1.php" method="post">
-		<label for="trucks">Choose Under / Over: </label>
-		  <select id="trucks" name="trucks">
+	<form action="CovidMalaria11.php" method="post">
+		<label for="cars1">Choose Under / Over: </label>
+		  <select id="cars1" name="cars1">
 		    <option value="UNDER">Under</option>
 		    <option value="OVER">Over</option>
 		  </select>
-		Threshold: <input type="text" name="option"><br>
-		<label for="trucks">Choose Under / Over: </label>
-		  <select id="trucks" name="trucks">
+		Threshold: <input type="text" name="item1"><br>
+		<label for="cars2">Choose Under / Over: </label>
+		  <select id="cars2" name="cars2">
 		    <option value="UNDER">Under</option>
 		    <option value="OVER">Over</option>
 		  </select>
-		Threshold: <input type="text" name="option">
+		Threshold: <input type="text" name="item2">
 		<input type="submit">
 	</form>
 	<br/><br/>
