--- a/php/CovidVSMalaria.html
+++ b/php/CovidVSMalaria.html
@@ -7,6 +7,7 @@
 
    	<h3>1. Which are the countries with malaria incidence rates in the world where cumulative COVID19 case counts are (UNDER/OVER) (X amount) or deaths are (UNDER/OVER) (X amount)? </h3>
     <h3> Example: "UNDER 100 OVER 1" -- (will return all countries where COVID cases are under 100 OR over 1)</h3>
+	Malaria:
 	<form action="CovidMalaria11.php" method="post">
 		<label for="cars1">Choose Under / Over: </label>
 		  <select id="cars1" name="cars1">
@@ -22,6 +23,42 @@
 		Threshold: <input type="text" name="item2">
 		<input type="submit">
 	</form>
+	Covid Confirmed:
+	<form action="CovidMalaria12.php" method="post">
+		<label for="cars1">Choose Under / Over: </label>
+		  <select id="cars1" name="cars1">
+		    <option value="UNDER">Under</option>
+		    <option value="OVER">Over</option>
+		  </select>
+		Threshold: <input type="text" name="item1"><br>
+		<label for="cars2">Choose Under / Over: </label>
+		  <select id="cars2" name="cars2">
+		    <option value="UNDER">Under</option>
+		    <option value="OVER">Over</option>
+		  </select>
+		Threshold: <input type="text" name="item2">
+		<input type="submit">
+	</form>
+	Covid Deaths:
+	<form action="CovidMalaria13.php" method="post">
+		<label for="cars1">Choose Under / Over: </label>
+		  <select id="cars1" name="cars1">
+		    <option value="UNDER">Under</option>
+		    <option value="OVER">Over</option>
+		  </select>
+		Threshold: <input type="text" name="item1"><br>
+		<label for="cars2">Choose Under / Over: </label>
+		  <select id="cars2" name="cars2">
+		    <option value="UNDER">Under</option>
+		    <option value="OVER">Over</option>
+		  </select>
+		Threshold: <input type="text" name="item2">
+		<input type="submit">
+	</form>
+
+
+
+
 	<br/><br/>
 
 	<h3>2. What are the COVID-19 incidents for the countries with malaria rates (UNDER/ABOVE) (Threshold amount)?</h3>
