--- a/php/RegionalCovid.html
+++ b/php/RegionalCovid.html
@@ -8,13 +8,119 @@
 	<h3>1. List the country names and the (NORTH HEM/SOUTH HEM) they are in on Earth, along with the total covid case counts and deaths.</h3>
     <h3> Example: "NORTH HEM" -- (will return all countries data in NORTH HEMISPHERE)</h3>
 	<form action="RegionCOVID1.php" method="post">
-		<label for="cars">Choose Under / Over: </label>
+		<label for="cars">NORTH / SOUTH HEMISPHERE: </label>
 		  <select id="cars" name="cars">
 		    <option value="NORTH HEM">NORTH HEM</option>
 		    <option value="SOUTH HEM">SOUTH HEM</option>
 		  </select>
 		<input type="submit">
 	</form>
+
+	<h3>2. List the country names and the (SELECT TWO → Asia & Australasia, Eastern Europe, Latin America & the Caribbean, Middle East & North Africa, North America, Sub-Saharan Africa, Western Europe) they are in on Earth, along with the total covid case counts and deaths.</h3>
+    <h3> Example: "North America", "Western Europe"</h3>
+	COVID Confirmed
+	<form action="RegionCOVID21.php" method="post">
+		<label for="cars">Select Region 1: </label>
+		  <select id="cars" name="cars">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+<br>Select Region 1: 
+		  <label for="trucks">Select Regions: </label>
+		  <select id="trucks" name="trucks">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+		<input type="submit">
+	</form><br>
+
+	COVID Recovered
+	<form action="RegionCOVID22.php" method="post">
+		<label for="cars">Select Region 1: </label>
+		  <select id="cars" name="cars">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+<br>Select Region 1: 
+		  <label for="trucks">Select Regions: </label>
+		  <select id="trucks" name="trucks">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+		<input type="submit">
+	</form><br>
+
+	COVID Active
+	<form action="RegionCOVID23.php" method="post">
+		<label for="cars">Select Region 1: </label>
+		  <select id="cars" name="cars">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+<br>Select Region 1: 
+		  <label for="trucks">Select Regions: </label>
+		  <select id="trucks" name="trucks">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+		<input type="submit">
+	</form><br>
+
+	COVID Deaths
+	<form action="RegionCOVID24.php" method="post">
+		<label for="cars">Select Region 1: </label>
+		  <select id="cars" name="cars">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+<br>Select Region 1: 
+		  <label for="trucks">Select Regions: </label>
+		  <select id="trucks" name="trucks">
+		    <option value="Asia & Australasia">Asia & Australasia</option>
+		    <option value="Eastern Europe">Eastern Europe</option>
+		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
+		    <option value="Middle East & North Africa">Middle East & North Africa</option>
+		    <option value="North America">North America</option>
+		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
+		    <option value="Western Europe">Western Europe</option>
+		  </select>
+		<input type="submit">
+	</form><br>
 	
 
    </body>
