--- a/php/RegionalCovid.html
+++ b/php/RegionalCovid.html
@@ -8,8 +8,8 @@
 	<h3>1. List the country names and the (NORTH HEM/SOUTH HEM) they are in on Earth, along with the total covid case counts and deaths.</h3>
     <h3> Example: "NORTH HEM" -- (will return all countries data in NORTH HEMISPHERE)</h3>
 	<form action="RegionCOVID1.php" method="post">
-		<label for="cars">NORTH / SOUTH HEMISPHERE: </label>
-		  <select id="cars" name="cars">
+		<label for="rcovid1">NORTH / SOUTH HEMISPHERE: </label>
+		  <select id="rcovid1" name="rcovid1">
 		    <option value="NORTH HEM">NORTH HEM</option>
 		    <option value="SOUTH HEM">SOUTH HEM</option>
 		  </select>
