--- a/php/RegionalCovid.html
+++ b/php/RegionalCovid.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-	<h1>COVID-19 vs Malaria</h1>
+	<h1>Regional COVID19</h1>
     <h3>Team Members: KEVIN GORMAN (KGORMAN4), UTKARSH SINGH (USINGH5)</h3>
 
     <hr><br>
@@ -30,7 +30,7 @@
 		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
-<br>Select Region 1: 
+<br>Select Region 2: 
 		  <label for="trucks">Select Regions: </label>
 		  <select id="trucks" name="trucks">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
@@ -56,7 +56,7 @@
 		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
-<br>Select Region 1: 
+<br>Select Region 2: 
 		  <label for="trucks">Select Regions: </label>
 		  <select id="trucks" name="trucks">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
@@ -82,7 +82,7 @@
 		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
-<br>Select Region 1: 
+<br>Select Region 2: 
 		  <label for="trucks">Select Regions: </label>
 		  <select id="trucks" name="trucks">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
@@ -108,7 +108,7 @@
 		    <option value="Sub-Saharan Africa">Sub-Saharan Africa</option>
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
-<br>Select Region 1: 
+<br>Select Region 2: 
 		  <label for="trucks">Select Regions: </label>
 		  <select id="trucks" name="trucks">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
