--- a/php/RegionalCovid.html
+++ b/php/RegionalCovid.html
@@ -20,8 +20,8 @@
     <h3> Example: "North America", "Western Europe"</h3>
 	COVID Confirmed
 	<form action="RegionCOVID21.php" method="post">
-		<label for="cars">Select Region 1: </label>
-		  <select id="cars" name="cars">
+		<label for="rcovid211">Select Region 1: </label>
+		  <select id="rcovid211" name="rcovid211">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -31,8 +31,8 @@
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
 <br>Select Region 2: 
-		  <label for="trucks">Select Regions: </label>
-		  <select id="trucks" name="trucks">
+		  <label for="rcovid212">Select Regions: </label>
+		  <select id="rcovid212" name="rcovid212">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -46,8 +46,8 @@
 
 	COVID Recovered
 	<form action="RegionCOVID22.php" method="post">
-		<label for="cars">Select Region 1: </label>
-		  <select id="cars" name="cars">
+		<label for="rcovid221">Select Region 1: </label>
+		  <select id="rcovid221" name="rcovid221">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -57,8 +57,8 @@
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
 <br>Select Region 2: 
-		  <label for="trucks">Select Regions: </label>
-		  <select id="trucks" name="trucks">
+		  <label for="rcovid222">Select Regions: </label>
+		  <select id="rcovid222" name="rcovid222">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -72,8 +72,8 @@
 
 	COVID Active
 	<form action="RegionCOVID23.php" method="post">
-		<label for="cars">Select Region 1: </label>
-		  <select id="cars" name="cars">
+		<label for="rcovid231">Select Region 1: </label>
+		  <select id="rcovid231" name="rcovid231">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -83,8 +83,8 @@
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
 <br>Select Region 2: 
-		  <label for="trucks">Select Regions: </label>
-		  <select id="trucks" name="trucks">
+		  <label for="rcovid232">Select Regions: </label>
+		  <select id="rcovid232" name="rcovid232">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -98,8 +98,8 @@
 
 	COVID Deaths
 	<form action="RegionCOVID24.php" method="post">
-		<label for="cars">Select Region 1: </label>
-		  <select id="cars" name="cars">
+		<label for="rcovid241">Select Region 1: </label>
+		  <select id="rcovid241" name="rcovid241">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
@@ -109,8 +109,8 @@
 		    <option value="Western Europe">Western Europe</option>
 		  </select>
 <br>Select Region 2: 
-		  <label for="trucks">Select Regions: </label>
-		  <select id="trucks" name="trucks">
+		  <label for="rcovid242">Select Regions: </label>
+		  <select id="rcovid242" name="rcovid242">
 		    <option value="Asia & Australasia">Asia & Australasia</option>
 		    <option value="Eastern Europe">Eastern Europe</option>
 		    <option value="Latin America & the Caribbean">Latin America & the Caribbean</option>
