--- a/php/GeographicAggregates.html
+++ b/php/GeographicAggregates.html
@@ -86,22 +86,22 @@ li.dropdown {
     <hr>
   <!-- List of Overviews -->
     <h3>1. Show total population of each hemisphere</h3>
-    <form action="GeographicAggregates1.php" method="post">
+    <form action="GeographicAggregate1.php" method="post">
       <input type="submit" value="GeographicAggregates1">
     </form>
 
     <h3>2. Show weighted average democracy index data for each hemisphere</h3>
-    <form action="GeographicAggregates2.php" method="post">
+    <form action="GeographicAggregate2.php" method="post">
       <input type="submit" value="GeographicAggregates2">
     </form>
 
     <h3>3. Show total population of each hemisphere</h3>
-    <form action="GeographicAggregates3.php" method="post">
+    <form action="GeographicAggregate3.php" method="post">
       <input type="submit" value="GeographicAggregates3">
     </form>
 
     <h3>4. Show weighted average democracy index data for each hemisphere</h3>
-    <form action="GeographicAggregates4.php" method="post">
+    <form action="GeographicAggregate4.php" method="post">
       <input type="submit" value="GeographicAggregates4">
     </form>
 
