--- a/php/Overviews.html
+++ b/php/Overviews.html
@@ -70,7 +70,7 @@ li.dropdown {
     </div>
   </li>-->
   <li><a href="Overviews.html">Overviews</a></li>
-  <li><a href="MalariaVSCovid.html">Malaria vs COVID-19</a></li>
+  <li><a href="CovidVSMalaria.html">COVID VS Malaria</a></li>
   <li><a href="Population.html">Population</a></li>
   <li><a href="RegionalCovid.html">Regional COVID-19</a></li>
   <li><a href="GeographicAggregates.html">Geographic Aggregates</a></li>
