--- a/php/LifeExpectancy.html
+++ b/php/LifeExpectancy.html
@@ -95,6 +95,29 @@ li.dropdown {
       <input type="submit" value="Male Life Expectancy">
     </form>
 
+
+
+    <h3>2. List the 30 countries with the (HIGHEST/LOWEST) life expectancy at birth along with their malaria rates</h3>
+    <h3> Example: "HIGHEST " </h3>
+	Life Expectancy
+	<form action="lifeExpectancy21.php" method="post">
+		<label for="life21">Choose Under / Over: </label>
+		  <select id="life21" name="life21">
+		    <option value="HIGHEST">HIGHEST</option>
+		    <option value="LOWEST">LOWEST</option>
+		  </select>
+		<input type="submit">
+	</form>
+	COVID19 Incidence
+	<form action="lifeExpectancy22.php" method="post">
+		<label for="life22">Choose Under / Over: </label>
+		  <select id="life22" name="life22">
+		    <option value="HIGHEST">HIGHEST</option>
+		    <option value="LOWEST">LOWEST</option>
+		  </select>
+		<input type="submit">
+	</form>
+
     
 
   </body>
